kubernetes-manifests/patient-portal-acm-skupper-demo/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database
    demo: roadshow
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: quay.io/skupper/patient-portal-database
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database
  name: database
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: database
---
