kubernetes-manifests/patient-portal-acm-skupper-demo/payment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payment-processor
    demo: roadshow
  name: payment-processor
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-processor
  template:
    metadata:
      labels:
        app: payment-processor
    spec:
      containers:
        - name: payment-processor
          image: quay.io/skupper/patient-portal-payment-processor
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment-processor
  name: payment-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: payment-processor
