kubernetes-manifests/patient-portal-acm-skupper-demo/everything.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
      demo: roadshow
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: quay.io/skupper/patient-portal-database
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database
  name: database
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
    demo: roadshow
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: quay.io/mfoster/vulnerable-demo-applications:patient-portal-acm-demo-0.2
          ports:
            - containerPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-patient
  labels:
    app: frontend
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payment-processor
    demo: roadshow
  name: payment-processor
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-processor
  template:
    metadata:
      labels:
        app: payment-processor
    spec:
      containers:
        - name: payment-processor
          image: quay.io/skupper/patient-portal-payment-processor
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment-service
  name: payment-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: payment-service
