kubernetes-manifests/patient-portal-acm-skupper-demo/frontend.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: patient-frontend
    demo: roadshow
  name: patient-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: patient-frontend
  template:
    metadata:
      labels:
        app: patient-frontend
    spec:
      containers:
        - name: patient-frontend
          image: quay.io/mfoster/patient-portal-acm-skupper-demo:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-patient-route
  labels:
    app: patient-frontend
spec:
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: patient-frontend
  name: frontend-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: patient-frontend
---
